# monitor

./: package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  log.2024-06-25-10  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/core/: manager.rs  mod.rs
