[package]
name = "monitor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
anyhow = "1.0.83"
uuid = {  version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
regex = "1.10.5"
tokio-process = "0.2.5"
futures = "0.3.30"
subprocess = "0.2.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.x86_64-pc-windows-msvc]
linker = "lld"
rustflags = [
    "-Lnative=/home/username/.xwin/crt/lib/x86_64",
    "-Lnative=/home/username/.xwin/sdk/lib/um/x86_64",
    "-Lnative=/home/username/.xwin/sdk/lib/ucrt/x86_64"
]
